feat(task-5): local LLM integration, FSM greeting flow, privacy policy
- replace Yandex LLM with local Ollama (qwen2.5)
- add LLM warmup and latency logging
- stabilize GREETING FSM state handling
- require explicit contact sharing
- publish privacy policy via GitHub Pages
- improve Telegram HTML messaging