@@ -3,22 +3,23 @@ package museon_online.astor_butler.fsm.handler;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import museon_online.astor_butler.alisa.AlisaClient;
+import museon_online.astor_butler.alisa.dto.AgentResponse;
 import museon_online.astor_butler.fsm.core.BotState;
 import museon_online.astor_butler.fsm.core.CommandContext;
 import museon_online.astor_butler.telegram.utils.TelegramSender;
 import org.springframework.stereotype.Component;
 
 /**
- * Обрабатывает любые неожиданные сообщения —
- * делегирует Яндекс LLM для генерации осмысленного ответа.
+ * Fallback — осмысленный ответ AI,
+ * когда сообщение не попало ни в один сценарий FSM.
  */
 @Component
 @RequiredArgsConstructor
 @Slf4j
 public class FallbackHandler implements FSMHandler {
 
-   private final AlisaClient alisaClient;
-   private final TelegramSender telegramSender;
+    private final AlisaClient alisaClient;
+    private final TelegramSender telegramSender;
 
     @Override
     public BotState getState() {
@@ -30,26 +31,42 @@ public class FallbackHandler implements FSMHandler {
         Long chatId = ctx.getChatId();
         String userMessage = ctx.getMessageText();
 
-        log.info("🟢 [FSM] FALLBACK → start (chatId={}, text={})", chatId, userMessage);
+        log.info(
+                "🟢 [FSM] FALLBACK → start (chatId={}, text={})",
+                chatId,
+                userMessage
+        );
 
         try {
-            String prompt = String.format(
-                    "Пользователь написал: \"%s\".\n" +
-                            "Ответь от лица дворецкого Astor Butler — кратко, тепло и дружелюбно, предложи открыть меню.",
-                    userMessage
-            );
+            String prompt = """
+                    Пользователь написал: "%s".
+
+                    Ты — AI-дворецкий Astor Butler.
+                    Ответь вежливо, коротко и по делу.
+                    Если запрос не ясен — предложи посмотреть меню или задать вопрос.
+                    """.formatted(userMessage);
 
             log.debug("🧠 [AI] PROMPT: {}", prompt);
-            String reply = alisaClient.ask(prompt);
-            log.info("🎙️ [AI] RESPONSE: {}", reply);
 
-            telegramSender.sendText(chatId, reply);
-            log.info("📤 [TG] Message sent to user (chatId={})", chatId);
+            AgentResponse ai = alisaClient.ask(prompt);
+
+            log.info(
+                    "🎙️ [AI] intent={}, confidence={}",
+                    ai.intent(),
+                    ai.confidence()
+            );
+
+            telegramSender.sendText(chatId, ai.text());
+
+            log.info("📤 [TG] Fallback response sent (chatId={})", chatId);
 
         } catch (Exception e) {
-            log.error("❌ [FSM] FALLBACK → AI error: {}", e.getMessage(), e);
-            telegramSender.sendText(chatId,
-                    "Извините, сейчас я немного занят. Попробуйте написать позже 🙏");
+            log.error("❌ [FSM] FALLBACK → AI error", e);
+
+            telegramSender.sendText(
+                    chatId,
+                    "Извините, я сейчас не смог ответить. Попробуйте открыть меню 🙏"
+            );
         }
     }
 }
